Adicionando role entity.